# tyke-cpp

./: .clang-format  CMakeLists.txt  PROTOCOL.md  README.md  build.py
docs/: DESIGN.md  README.md  architecture.md
examples/: CMakeLists.txt  README.md  async_client.cpp  client.cpp  large_transfer_test.cpp  server.cpp  sync_client.cpp  test_request_controller.cpp  test_request_controller.h  test_request_filter.cpp  test_request_filter.h  test_response_controller.cpp  test_response_controller.h  test_response_filter.cpp  test_response_filter.h
examples/controllers/: example_request_controller.cpp  example_request_controller.h  example_response_controller.cpp  example_response_controller.h
tyke/: CMakeLists.txt
tyke/include/common/: common_def.h  get_singleton.h  json_def.h  log_def.h  tyke_def.h  tyke_export.h  tyke_result.h  tyke_utils.h
tyke/include/component/: context.h  object_pool.h  object_pool.hpp  singleton.h  singleton.hpp  thread_pool.h  thread_pool.hpp  timing_wheel.h
tyke/include/controller/: controller_base.h  controller_registry.h  request_controller.h  response_controller.h
tyke/include/core/: context_factory.h  controller_base.h  data_handler.h  data_proc.h  dispatcher.h  framework.h  log_config.h  message_dispatcher.h  metadata_base.h  request.h  request_filter.h  request_metadata.h  request_router.h  request_router_group.h  request_stub.h  response.h  response_controller.h  response_filter.h  response_future.h  response_metadata.h  response_router.h  response_router_group.h  router_base.h  router_group.h  tyke_framework.h  tyke_log.h  tyke_request.h  tyke_response.h
tyke/include/define/: controller_base.h  request_controller.h  request_filter.h  response_filter.h
tyke/include/filter/: request_filter.h  response_filter.h
tyke/include/ipc/: connection_pool.h  connection_pool_factory.h  ipc_client.h  ipc_client_pool.h  ipc_crypto.h  ipc_def.h  ipc_internal_platform.h  ipc_server.h  ipc_types.h
tyke/include/tyke/: tyke.h
tyke/include/tyke/common/: json_def.h  log_def.h  tyke_def.h  tyke_export.h  tyke_utils.h
tyke/include/tyke/component/: context.h  object_pool.h  singleton.h
tyke/include/tyke/core/: context_factory.h  controller_base.h  data_handler.h  data_proc.h  dispatcher.h  framework.h  log_config.h  metadata_base.h  request.h  request_controller.h  request_filter.h  request_metadata.h  request_router.h  request_router_group.h  request_stub.h  response.h  response_controller.h  response_filter.h  response_metadata.h  response_router.h  response_router_group.h  router_base.h  router_group.h
tyke/include/tyke/ipc/: connection_pool.h  connection_pool_factory.h  ipc_client.h  ipc_crypto.h  ipc_def.h  ipc_frame.h  ipc_internal_platform.h  ipc_server.h
tyke/src/common/: tyke_utils.cpp
tyke/src/component/: context.cpp  thread_pool.cpp  timing_wheel.cpp
tyke/src/core/: context_factory.cpp  data_handler.cpp  data_proc.cpp  dispatcher.cpp  framework.cpp  log_config.cpp  message_dispatcher.cpp  request.cpp  request_metadata.cpp  request_router.cpp  request_stub.cpp  response.cpp  response_future.cpp  response_metadata.cpp  response_router.cpp  tyke_framework.cpp  tyke_log.cpp  tyke_request.cpp  tyke_response.cpp
tyke/src/ipc/: connection_pool.cpp  connection_pool_factory.cpp  ipc_client.cpp  ipc_client_pool.cpp  ipc_crypto.cpp  ipc_platform_linux.cpp  ipc_platform_win.cpp  ipc_server.cpp
tyke/src/tyke/common/: tyke_utils.cpp
tyke/src/tyke/component/: context.cpp  thread_pool.cpp  timing_wheel.cpp
tyke/src/tyke/core/: context_factory.cpp  data_handler.cpp  data_proc.cpp  dispatcher.cpp  framework.cpp  log_config.cpp  request.cpp  request_metadata.cpp  request_stub.cpp  response.cpp  response_metadata.cpp
tyke/src/tyke/ipc/: connection_pool.cpp  connection_pool_factory.cpp  ipc_client.cpp  ipc_crypto.cpp  ipc_frame.cpp  ipc_platform_linux.cpp  ipc_platform_win.cpp  ipc_server.cpp
